# openslide

./: CMakeLists.txt  Makefile.am
src/: CMakeLists.txt  openslide-private.h  openslide-vendor-ventana.c  openslide.c
